--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "luxon": "^1.27.0",
+    "moment": "^2.29.1",
+    "sweetalert2": "^11.0.17",
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
+    "vue-datetime": "^1.0.0-beta.14",
     "vue-router": "^3.2.0",
     "vue-toast-notification": "^0.6.2",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "weekstart": "^1.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
